Refactored code organisation to have a clearer structure and split out some API modules

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Sample Dendriform App</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="tree.css">
   </head>
   <body>
 
-    <div id="treething"></div>
-
-    <script src="main.bundle.js"></script>
+    <script src="tree.bundle.js"></script>
+    <script src="example.bundle.js"></script>
   </body>
 </html>
