--- a/src/example/index.html
+++ b/src/example/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="tree.css">
   </head>
   <body>
-    <script src="example.bundle.js"></script>
+    <script type="module" src="example.77a2097b.mjs"></script>
   </body>
 </html>
