--- a/src/example/index.html
+++ b/src/example/index.html
@@ -5,7 +5,12 @@
     <title>Sample Dendriform App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">  
-    <link rel="stylesheet" href="main.css">
+    <style>
+      body {
+        /* prevents toggling of width */
+        overflow-y: scroll;
+      }
+    </style>
     <link rel="stylesheet" href="tree.css">
   </head>
   <body>
