Reformatting everything with prettier and some slightly tweaked rules

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Sample Dendriform App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <style>
       body {
         /* prevents toggling of width */
         overflow-y: scroll;
       }
     </style>
-    <link rel="stylesheet" href="tree.css">
+    <link rel="stylesheet" href="tree.css" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
