Upgraded dependencies and prevent favicon fetching

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -12,6 +12,7 @@
       }
     </style>
     <link rel="stylesheet" href="tree.css" />
+    <link rel="icon" href="data:,">
   </head>
   <body></body>
 </html>
