--- a/src/example/index2.html
+++ b/src/example/index2.html
@@ -13,6 +13,7 @@
     </style>
     <link rel="stylesheet" href="tree.css" />
     <script type="module" src="main.js"></script>
+    <link rel="icon" href="data:,">
   </head>
   <body></body>
 </html>
